[tool.poetry]
name = "mujtaba-charm"
version = "0.1.0"
description = ""
authors = ["MujtabaNasir <mujtaba.nasir1312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.extras]
dev = ["pytest", "black", "isort", "coverage", "pytest-cov", "sphinx", "sphinx-autodoc-typehints"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.isort]
profile = "black"
