[tool.poetry]
name = "mujtaba-charm"
version = "0.1.0"
description = ""
authors = ["MujtabaNasir <mujtaba.nasir1312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = [
   {version = "<=1.24.*", python = "<3.9"},
   {version = ">=1.25.*", python = ">=3.9"}
]

[tool.poetry.extras]
dev = ["pytest", "black", "isort", "coverage", "pytest-cov", "sphinx", "sphinx-autodoc-typehints","matplotlib"]

[tool.poetry.group.dev.dependencies]
sphinx-autodoc-typehints = "2.0.0"
sphinx = "7.1.2"
pytest = "^8.3.2"
black = "^24.4.2"
isort = "^5.13.2"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"
wheel = "^0.43.0"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tools.isort]
profile = "black"
